crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_133_SachenSA72008_Jovial_Race_Sachen.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-133-SachenSA72008/Jovial Race (Sachen) [!].nes
rom_sha256=953d51cffae411ce92147de6e054236788b42abccf7d8060205014c38a0cb0fd
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=b35a07f8f4baff44
checkpoint f900 fb_fnv1a64=5270079fb63e9de5
checkpoint f1100 fb_fnv1a64=33c0a85c34146cf7
